Wed Aug 25 09:42:05 1999  Martin Man  <Martin.Man@seznam.cz>

        * Source/NSWindow.m ([NSWindow -setFrameTopLeftPoint:]): Corrected
        positioning of window's top left point. X coordinate was ignored
        and Y coordinate was computed in wrong way.

Thu Aug 26  5:07:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Patch from Niico Pero <n.pero@mi.flashnet.it> modified to use
	controlDarkShadowColor rather than blackColor.
	* Source/NSBox.m: draw line borders in correct color.
	* Source/NSCell.m ditto
	* Source/NSScrollView.m: ditto
	* Source/NSTabView.m: ditto

Sun Aug 22 11:52:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: ([-viewWillMoveToWindow:]) fixed to call method
	in subviews when new window is nil.

1999-08-22  Gerrit van Dyk <gerritvd@decimax.com>

	* Headers/NSProgressIndicator.h
		  AppKit.h: Added ProgressIndicator
	* Source/NSProgressIndicator.m: Added ProgressIndicator. Only
	determinate Indicators works at this stage.

1999-08-21  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSCell.m: lots of fixes to editWithFrame, and fieldEditor
	related methods.
	* Source/NSText.m: caret drawing now works.
	* Source/NSTextField.m: fixes to allow for single click and type
	usage of textFields.
	* Source/NSView.m: fixed bug in viewWillMoveToWindow: which could
	cause an X11 protocol error in the backend.

1999-08-20  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSSlider.m: added missing [self unlockFocus];.
	* Source/NSMenu.m: fixes to sizeToFit and update. This allows you
	to keep the windows and services menus tornoff and when you rerun
	the program these menus will look correct.
	* Source/NSMenuView.m: ditto.

1999-08-19  Michael Hanni  <mhanni@sprintmail.com>

	* Headers/NSAttributedString.h
		  NSLayoutManager.h
		  NSTableView.h: modifications, mostly added ivars.
	* Source/NSLayoutManager.m: implemented much code for layout and
	display.